--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -146,7 +146,7 @@
   <div class="container-fluid p-lg-0">
     <div purpose="platform-user-story" class="mx-auto">
       <div class="flex-sm-row flex-column row justify-content-around justify-content-sm-between text-center text-sm-left">
-        <div class="col-12 col-sm-2 col-md-4 pb-md-0 pb-5">
+        <div class="position-relative col-12 col-sm-2 col-md-4 pb-md-0 pb-5">
           <img alt="Schrodinger logo" src="/images/platform/logo-schrodinger-120x120@2x.png">
           <svg class="d-none d-sm-inline" viewBox="0 0 238 181" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="53.9834" cy="90.2871" r="183.5" fill="white"/>
