--- a/frontend/components/queries/PackQueriesListWrapper/_styles.scss
+++ b/frontend/components/queries/PackQueriesListWrapper/_styles.scss
@@ -40,4 +40,12 @@
     font-size: $x-small;
     font-weight: $bold;
   }
+
+  .queries-table__performance-impact-header {
+    margin-right: $pad-small;
+  }
+
+  .queries-table__performance-impact-tooltip {
+    font-weight: 400;
+  }
 }
